--- a/homeworks/homework_2/index.html
+++ b/homeworks/homework_2/index.html
@@ -5,7 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css" type="text/css">
-  <link rel="stylesheet" href="libs/bootstrap-grid.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
   <title>МАГАЗИН</title>
 </head>
 <body>
@@ -13,142 +15,128 @@
     <h1 class="h1">Магазин техники Apple</h1>
   </header>
   <div class="container">
-    <div class="row">
-      <div class="col-md-4">
-        <div class="product">
-          <div class="image">
-            <img src="img/1_275719.jpg" alt="">
-          </div>
-          <div>
-            <div class="info">
-              <h3>Apple iPad Pro Wi-Fi 2 ТБ</h3>
-              <ul class="rating">
-                <li><ion-icon name="star"></ion-icon></li>
-                <li><ion-icon name="star"></ion-icon></li>
-                <li><ion-icon name="star"></ion-icon></li>
-                <li><ion-icon name="star"></ion-icon></li>
-                <li><ion-icon name="star"></ion-icon></li>
-              </ul>
-              <div class="info_price">
-                <span class="price">1899<small><ion-icon name="logo-usd"></ion-icon></small></span>
-                <button type="button" class="button"><ion-icon class="icon" name="bag-add-outline"></ion-icon></button>
-              </div>
-            </div>
+    <div class="product">
+      <div class="image">
+        <img src="img/1_275719.jpg" alt="">
+      </div>
+      <div>
+        <div class="info">
+          <h3>Apple iPad Pro Wi-Fi 2 ТБ</h3>
+          <ul class="rating">
+            <li><ion-icon name="star"></ion-icon></li>
+            <li><ion-icon name="star"></ion-icon></li>
+            <li><ion-icon name="star"></ion-icon></li>
+            <li><ion-icon name="star"></ion-icon></li>
+            <li><ion-icon name="star"></ion-icon></li>
+          </ul>
+          <div class="info_price">
+            <span class="price">1899<small><ion-icon name="logo-usd"></ion-icon></small></span>
+            <button type="button" class="button"><ion-icon class="icon" name="bag-add-outline"></ion-icon></button>
           </div>
         </div>
       </div>
-      <div class="col-md-4">
-        <div class="product">
-          <div class="image">
-            <img src="img/1_177770.jpg" alt="">
-          </div>
-          <div>
-            <div class="info">
-              <h3>Apple AirPods Pro</h3>
-              <ul class="rating">
-                <li><ion-icon name="star"></ion-icon></li>
-                <li><ion-icon name="star"></ion-icon></li>
-                <li><ion-icon name="star"></ion-icon></li>
-                <li><ion-icon name="star"></ion-icon></li>
-                <li><ion-icon name="star"></ion-icon></li>
-              </ul>
-              <div class="info_price">
-                <span class="price">249<small><ion-icon name="logo-usd"></ion-icon></small></span>
-                <button type="button" class="button"><ion-icon class="icon" name="bag-add-outline"></ion-icon></button>
-              </div>
-            </div>
+    </div>
+    <div class="product">
+      <div class="image">
+        <img src="img/1_177770.jpg" alt="">
+      </div>
+      <div>
+        <div class="info">
+          <h3>Apple AirPods Pro</h3>
+          <ul class="rating">
+            <li><ion-icon name="star"></ion-icon></li>
+            <li><ion-icon name="star"></ion-icon></li>
+            <li><ion-icon name="star"></ion-icon></li>
+            <li><ion-icon name="star"></ion-icon></li>
+            <li><ion-icon name="star"></ion-icon></li>
+          </ul>
+          <div class="info_price">
+            <span class="price">249<small><ion-icon name="logo-usd"></ion-icon></small></span>
+            <button type="button" class="button"><ion-icon class="icon" name="bag-add-outline"></ion-icon></button>
           </div>
         </div>
       </div>
-      <div class="col-md-4">
-        <div class="product">
-          <div class="image">
-            <img src="img/1_275742.jpg" alt="">
-          </div>
-          <div>
-            <div class="info">
-              <h3>Apple iMac 24 M1</h3>
-              <ul class="rating">
-                <li><ion-icon name="star"></ion-icon></li>
-                <li><ion-icon name="star"></ion-icon></li>
-                <li><ion-icon name="star"></ion-icon></li>
-                <li><ion-icon name="star"></ion-icon></li>
-                <li><ion-icon name="star"></ion-icon></li>
-              </ul>
-              <div class="info_price">
-                <span class="price">1499<small><ion-icon name="logo-usd"></ion-icon></small></span>
-                <button type="button" class="button"><ion-icon class="icon" name="bag-add-outline"></ion-icon></button>
-              </div>
-            </div>
+    </div>
+    <div class="product">
+      <div class="image">
+        <img src="img/1_275742.jpg" alt="">
+      </div>
+      <div>
+        <div class="info">
+          <h3>Apple iMac 24 M1</h3>
+          <ul class="rating">
+            <li><ion-icon name="star"></ion-icon></li>
+            <li><ion-icon name="star"></ion-icon></li>
+            <li><ion-icon name="star"></ion-icon></li>
+            <li><ion-icon name="star"></ion-icon></li>
+            <li><ion-icon name="star"></ion-icon></li>
+          </ul>
+          <div class="info_price">
+            <span class="price">1499<small><ion-icon name="logo-usd"></ion-icon></small></span>
+            <button type="button" class="button"><ion-icon class="icon" name="bag-add-outline"></ion-icon></button>
           </div>
         </div>
       </div>
-      <div class="col-md-4">
-        <div class="product">
-          <div class="image">
-            <img src="img/1_304214.jpg" alt="">
-          </div>
-          <div>
-            <div class="info">
-              <h3>Apple iPhone 13 Pro Max 1 ТБ</h3>
-              <ul class="rating">
-                <li><ion-icon name="star"></ion-icon></li>
-                <li><ion-icon name="star"></ion-icon></li>
-                <li><ion-icon name="star"></ion-icon></li>
-                <li><ion-icon name="star"></ion-icon></li>
-                <li><ion-icon name="star"></ion-icon></li>
-              </ul>
-              <div class="info_price">
-                <span class="price">1599<small><ion-icon name="logo-usd"></ion-icon></small></span>
-                <button type="button" class="button"><ion-icon class="icon" name="bag-add-outline"></ion-icon></button>
-              </div>
-            </div>
+    </div>
+    <div class="product">
+      <div class="image">
+        <img src="img/1_304214.jpg" alt="">
+      </div>
+      <div>
+        <div class="info">
+          <h3>Apple iPhone 13 Pro Max 1 ТБ</h3>
+          <ul class="rating">
+            <li><ion-icon name="star"></ion-icon></li>
+            <li><ion-icon name="star"></ion-icon></li>
+            <li><ion-icon name="star"></ion-icon></li>
+            <li><ion-icon name="star"></ion-icon></li>
+            <li><ion-icon name="star"></ion-icon></li>
+          </ul>
+          <div class="info_price">
+            <span class="price">1599<small><ion-icon name="logo-usd"></ion-icon></small></span>
+            <button type="button" class="button"><ion-icon class="icon" name="bag-add-outline"></ion-icon></button>
           </div>
         </div>
       </div>
-      <div class="col-md-4">
-        <div class="product">
-          <div class="image">
-            <img src="img/1_309817.jpg" alt="">
-          </div>
-          <div>
-            <div class="info">
-              <h3>Apple Watch Series 7 45 мм</h3>
-              <ul class="rating">
-                <li><ion-icon name="star"></ion-icon></li>
-                <li><ion-icon name="star"></ion-icon></li>
-                <li><ion-icon name="star"></ion-icon></li>
-                <li><ion-icon name="star"></ion-icon></li>
-                <li><ion-icon name="star"></ion-icon></li>
-              </ul>
-              <div class="info_price">
-                <span class="price">529<small><ion-icon name="logo-usd"></ion-icon></small></span>
-                <button type="button" class="button"><ion-icon class="icon" name="bag-add-outline"></ion-icon></button>
-              </div>
-            </div>
+    </div>
+    <div class="product">
+      <div class="image">
+        <img src="img/1_309817.jpg" alt="">
+      </div>
+      <div>
+        <div class="info">
+          <h3>Apple Watch Series 7 45 мм</h3>
+          <ul class="rating">
+            <li><ion-icon name="star"></ion-icon></li>
+            <li><ion-icon name="star"></ion-icon></li>
+            <li><ion-icon name="star"></ion-icon></li>
+            <li><ion-icon name="star"></ion-icon></li>
+            <li><ion-icon name="star"></ion-icon></li>
+          </ul>
+          <div class="info_price">
+            <span class="price">529<small><ion-icon name="logo-usd"></ion-icon></small></span>
+            <button type="button" class="button"><ion-icon class="icon" name="bag-add-outline"></ion-icon></button>
           </div>
         </div>
       </div>
-      <div class="col-md-4">
-        <div class="product">
-          <div class="image">
-            <img src="img/1_311584.jpg" alt="">
-          </div>
-          <div>
-            <div class="info">
-              <h3>Apple MacBook Pro 14 M1 PRO</h3>
-              <ul class="rating">
-                <li><ion-icon name="star"></ion-icon></li>
-                <li><ion-icon name="star"></ion-icon></li>
-                <li><ion-icon name="star"></ion-icon></li>
-                <li><ion-icon name="star"></ion-icon></li>
-                <li><ion-icon name="star"></ion-icon></li>
-              </ul>
-              <div class="info_price">
-                <span class="price">1999<small><ion-icon name="logo-usd"></ion-icon></small></span>
-                <button type="button" class="button"><ion-icon class="icon" name="bag-add-outline"></ion-icon></button>
-              </div>
-            </div>
+    </div>
+    <div class="product">
+      <div class="image">
+        <img src="img/1_311584.jpg" alt="">
+      </div>
+      <div>
+        <div class="info">
+          <h3>Apple MacBook Pro 14 M1 PRO</h3>
+          <ul class="rating">
+            <li><ion-icon name="star"></ion-icon></li>
+            <li><ion-icon name="star"></ion-icon></li>
+            <li><ion-icon name="star"></ion-icon></li>
+            <li><ion-icon name="star"></ion-icon></li>
+            <li><ion-icon name="star"></ion-icon></li>
+          </ul>
+          <div class="info_price">
+            <span class="price">1999<small><ion-icon name="logo-usd"></ion-icon></small></span>
+            <button type="button" class="button"><ion-icon class="icon" name="bag-add-outline"></ion-icon></button>
           </div>
         </div>
       </div>
