--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <div class="homework__card">
           <a href="./homeworks/homework_2/index.html" target="_blank">Домашнее задание №2</a>
         </div>
+        <div class="homework__card">
+          <a href="./homeworks/homework_3/index.html" target="_blank">Домашнее задание №2</a>
+        </div>
       </div>
     </div>
   </main>
