--- a/homeworks/homework_3/index.html
+++ b/homeworks/homework_3/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="main-container">
         <header class="header">
-            <div class="address-book">
+            <div class="header__address-book">
                 <h1 class="title">Адресная книга</h1>
             </div>
         </header>
