--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <div class="homework__card">
           <a href="./homeworks/homework_3/index.html" target="_blank">Домашнее задание №3</a>
         </div>
+        <div class="homework__card">
+          <a href="./homeworks/homework_4/index.html" target="_blank">Домашнее задание №4</a>
+        </div>
       </div>
     </div>
   </main>
